[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_mmscr"]

[sub_resource type="StyleBoxFlat" id="SubResource_btn_normal"]
bg_color = Color(0.2, 0.25, 0.35, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 20.0
content_margin_top = 12.0
content_margin_right = 20.0
content_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="SubResource_btn_hover"]
bg_color = Color(0.3, 0.35, 0.5, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 20.0
content_margin_top = 12.0
content_margin_right = 20.0
content_margin_bottom = 12.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mmscr")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.14, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Dragon Survivors"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="KnightButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 50)
theme_override_styles/normal = SubResource("SubResource_btn_normal")
theme_override_styles/hover = SubResource("SubResource_btn_hover")
text = "Play as Knight"

[node name="ArcherButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 50)
theme_override_styles/normal = SubResource("SubResource_btn_normal")
theme_override_styles/hover = SubResource("SubResource_btn_hover")
text = "Play as Archer"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 50)
theme_override_styles/normal = SubResource("SubResource_btn_normal")
theme_override_styles/hover = SubResource("SubResource_btn_hover")
text = "Quit"
